--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
     <section class="hero">
       
       <div class="video-container">
-        <iframe 
-            width="1600" 
-            height="800" 
-            src="https://www.youtube.com/embed/Tuc2M4bby8s" 
-            title="YouTube video player" 
-            frameborder="0" 
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        <iframe
+            width="1600"
+            height="800"
+            src="https://www.youtube.com/embed/Tuc2M4bby8s"
+            title="YouTube video player"
+            frameborder="0" autoplay
             allowfullscreen>
         </iframe>
+      </div>
       
     </section>
 
